--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ script:
   - npm run docs
 
 deploy:
- - firebase deploy --token "$FIREBASE_TOKEN" --non-interactive
+ - firebase deploy --token $FIREBASE_TOKEN --non-interactive
 
 notifications:
   webhooks:
