--- a/.travis.yml
+++ b/.travis.yml
@@ -23,8 +23,7 @@ script:
 - ng e2e
 - npm run docs
 before_deploy:
-- cd functions && npm install
-- cd ..
+- cd functions && npm install && cd ..
 deploy:
   provider: firebase
   token:
