--- a/package.json
+++ b/package.json
@@ -25,8 +25,13 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "angularfire2": "^5.0.0-rc.3",
+    "classlist.js": "^1.1.20150312",
     "core-js": "^2.4.1",
+    "firebase": "^4.6.2",
+    "intl": "^1.2.5",
     "rxjs": "^5.5.2",
+    "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
