--- a/package.json
+++ b/package.json
@@ -25,10 +25,14 @@
     "@angular/platform-browser": "^5.0.2",
     "@angular/platform-browser-dynamic": "^5.0.2",
     "@angular/router": "^5.0.2",
+    "angular-bootstrap-md": "^5.0.5",
     "angularfire2": "5.0.0-rc.4",
+    "chart.js": "^2.5.0",
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.4.1",
     "firebase": "^4.6.2",
+    "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
     "intl": "^1.2.5",
     "lodash": "^4.17.4",
     "rxjs": "^5.5.2",
