--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^1.0.0-beta.2",
     "@angular/animations": "^5.0.2",
     "@angular/common": "^5.0.2",
     "@angular/compiler": "^5.0.2",
@@ -48,7 +49,7 @@
     "@types/jasminewd2": "~2.0.2",
     "@types/jest": "^21.1.6",
     "@types/node": "~6.0.60",
-    "codelyzer": "~3.2.0",
+    "codelyzer": "~4.0.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "jest": "^21.2.1",
