--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
   "devDependencies": {
     "@angular/cli": "1.5.0",
     "@angular/compiler-cli": "^5.0.2",
-    "@angular/language-service": "^5.0.2",
+    "@angular/service-worker": "^5.0.2",
     "@compodoc/compodoc": "^1.0.4",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
