--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "gulp-rename": "1.2.x",
     "gulp-run": "1.7.x",
     "hammerjs": "2.0.x",
+    "intl": "^1.2.5",
+    "lodash": "^4.17.4",
     "ng-html-util": "1.0.x",
     "ngm-cli": "0.5.x",
     "rxjs": "^5.5.2",
@@ -69,13 +71,13 @@
     "karma": "~1.4.1",
     "karma-chrome-launcher": "~2.0.0",
     "karma-cli": "~1.0.1",
+    "karma-coverage-istanbul-reporter": "^0.2.0",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "karma-coverage-istanbul-reporter": "^0.2.0",
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
-    "typescript": "~2.5.0",
+    "typescript": "2.4.2",
     "webpack": "3.x"
   },
   "jest": {
