--- a/package.json
+++ b/package.json
@@ -83,6 +83,9 @@
   "jest": {
     "preset": "jest-preset-angular",
     "setupTestFrameworkScriptFile": "<rootDir>/src/jest.conf.ts",
+    "setupFiles": [
+      "<rootDir>/jest-mocks/shimSetup.ts"
+    ],
     "transformIgnorePatterns": [
       "node_modules"
     ],
