--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,14 @@ sudo: required
 dist: trusty
 language: node_js
 node_js:
-- 8.9.1
+- 8
+branches:
+  only:
+  - master
+  - develop
+cache:
+  directories:
+    - "node_modules"
 before_install:
 - export CHROME_BIN=/usr/bin/google-chrome
 - export DISPLAY=:99.0
