--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,15 @@ cache:
   directories:
     - "node_modules"
 addons:
-  chrome: stable
-  firefox: latest
+  apt:
+    sources:
+      - google-chrome
+    packages:
+      - google-chrome-stable
+before_install:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - "npm config set spin false"
 before_script:
 - npm install -g firebase-tools
 - npm install -g @angular/cli
