--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "angularfire2": "5.0.0-rc.4",
     "chart.js": "2.5.x",
     "classlist.js": "1.1.x",
-    "core-js": "2.4.x",
+    "core-js": "^2.5.1",
     "del": "3.0.x",
     "easy-pie-chart": "2.1.x",
     "firebase": "^4.6.2",
@@ -47,10 +47,10 @@
     "intl": "^1.2.5",
     "lodash": "^4.17.4",
     "ng-html-util": "1.0.x",
-    "ngm-cli": "0.5.x",
+    "ngm-cli": "^0.8.3",
     "rxjs": "^5.5.2",
     "screenfull": "3.3.x",
-    "smoothscroll-polyfill": "0.3.x",
+    "smoothscroll-polyfill": "^0.4.0",
     "web-animations-js": "2.3.x",
     "zone.js": "0.8.x"
   },
@@ -59,24 +59,24 @@
     "@angular/compiler-cli": "^5.0.0",
     "@angular/language-service": "^5.0.0",
     "@compodoc/compodoc": "^1.0.4",
-    "@types/jasmine": "~2.5.53",
+    "@types/jasmine": "^2.8.2",
     "@types/jasminewd2": "~2.0.2",
     "@types/jest": "^21.1.8",
-    "@types/node": "~6.0.60",
-    "codelyzer": "~3.2.0",
-    "jasmine-core": "~2.5.2",
-    "jasmine-spec-reporter": "~3.2.0",
+    "@types/node": "^8.0.53",
+    "codelyzer": "^4.0.1",
+    "jasmine-core": "^2.8.0",
+    "jasmine-spec-reporter": "^4.2.1",
     "jest": "^21.2.1",
     "jest-preset-angular": "^4.0.1",
-    "karma": "~1.4.1",
-    "karma-chrome-launcher": "~2.0.0",
+    "karma": "^1.7.1",
+    "karma-chrome-launcher": "^2.2.0",
     "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^0.2.0",
+    "karma-coverage-istanbul-reporter": "^1.3.0",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
-    "ts-node": "~3.2.0",
-    "tslint": "~5.7.0",
+    "protractor": "^5.2.0",
+    "ts-node": "^3.3.0",
+    "tslint": "^5.8.0",
     "typescript": "2.4.2",
     "webpack": "3.x"
   },
