--- a/package.json
+++ b/package.json
@@ -6,18 +6,13 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "test": "jest --browser",
-    "test:watch": "jest --browser --watch",
-    "test:ci": "jest --browser --runInBand",
-    "test:coverage": "jest --browser --runInBand --coverage",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "docs": "./node_modules/.bin/compodoc -d ./docs/ -p ./tsconfig.json -n \"Eventpicking - Dokumentation\"",
-    "build:free": "ngm build -p src/app/typescripts/free --clean && gulp npmFree && gulp startFree && gulp onlyFree",
-    "build:pro": "ngm build -p src/app/typescripts/pro --clean && gulp only-pro && gulp startPro",
-    "build:all": "npm run build:free && npm run build:pro",
-    "aot:build": "ng build --prod --sm=false --aot=true --output-path=dist",
-    "pre-commit": "ng lint"
+    "pwa": "ng build --prod && sw-precache --root=dist --config=precache-config.js",
+    "test": "jest --browser",
+    "test:ci": "jest --browser --runInBand",
+    "test:coverage": "jest --browser --runInBand --coverage",
+    "docs": "./node_modules/.bin/compodoc -d ./docs/ -p ./tsconfig.json -n \"Eventpicking - Dokumentation\""
   },
   "private": true,
   "dependencies": {
@@ -31,6 +26,7 @@
     "@angular/platform-browser": "^5.0.3",
     "@angular/platform-browser-dynamic": "^5.0.3",
     "@angular/router": "^5.0.3",
+    "@angular/service-worker": "^5.0.3",
     "@ng-bootstrap/ng-bootstrap": "1.0.0-beta.5",
     "angularfire2": "5.0.0-rc.4",
     "chart.js": "2.5.x",
@@ -75,6 +71,7 @@
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "^5.2.0",
+    "sw-precache-webpack-plugin": "^0.11.4",
     "ts-node": "^3.3.0",
     "tslint": "^5.8.0",
     "typescript": "2.4.2",
