--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@angular/router": "^5.0.3",
     "@angular/service-worker": "^5.0.3",
     "@ng-bootstrap/ng-bootstrap": "1.0.0-beta.5",
+    "@ngx-translate/core": "^9.0.1",
+    "@ngx-translate/http-loader": "^2.0.0",
     "angularfire2": "5.0.0-rc.4",
     "chart.js": "2.5.x",
     "classlist.js": "1.1.x",
