--- a/package.json
+++ b/package.json
@@ -31,23 +31,23 @@
     "@ngx-translate/core": "^9.0.1",
     "@ngx-translate/http-loader": "^2.0.0",
     "angularfire2": "5.0.0-rc.4",
-    "chart.js": "2.5.x",
+    "chart.js": "^2.7.1",
     "classlist.js": "1.1.x",
     "core-js": "^2.5.1",
     "del": "3.0.x",
-    "easy-pie-chart": "2.1.x",
+    "easy-pie-chart": "^2.1.7",
     "firebase": "^4.6.2",
-    "font-awesome": "4.7.x",
+    "font-awesome": "^4.7.0",
     "gulp": "^3.9.1",
     "gulp-rename": "1.2.x",
     "gulp-run": "1.7.x",
-    "hammerjs": "2.0.x",
+    "hammerjs": "^2.0.8",
     "intl": "^1.2.5",
     "lodash": "^4.17.4",
     "ng-html-util": "1.0.x",
     "ngm-cli": "^0.8.3",
     "rxjs": "^5.5.2",
-    "screenfull": "3.3.x",
+    "screenfull": "^3.3.0",
     "smoothscroll-polyfill": "^0.4.0",
     "web-animations-js": "2.3.x",
     "zone.js": "0.8.x"
