--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "intl": "^1.2.5",
     "lodash": "^4.17.4",
     "ng-html-util": "1.0.x",
+    "ng-mdb-pro": "git+https://oauth2:w67qvcj6w1FbSFmHZpjX@git.mdbootstrap.com/mdb/angular/ng-pro.git",
     "ngm-cli": "^0.8.3",
     "rxjs": "^5.5.2",
     "screenfull": "^3.3.0",
