--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "hammerjs": "^2.0.8",
     "intl": "^1.2.5",
     "ng-mdb-pro": "git+https://oauth2:w67qvcj6w1FbSFmHZpjX@git.mdbootstrap.com/mdb/angular/ng-pro.git",
+    "ng2-logger": "^1.0.3",
     "rxjs": "^5.5.2",
     "screenfull": "^3.3.2",
     "web-animations-js": "^2.3.1",
