--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "intl": "^1.2.5",
+    "lodash": "^4.17.4",
     "ng-mdb-pro": "git+https://oauth2:w67qvcj6w1FbSFmHZpjX@git.mdbootstrap.com/mdb/angular/ng-pro.git",
     "ng2-logger": "^1.0.3",
     "rxjs": "^5.5.2",
