--- a/functions/package.json
+++ b/functions/package.json
@@ -9,8 +9,12 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
+    "@google-cloud/storage": "^1.5.0",
     "firebase-admin": "~5.4.2",
-    "firebase-functions": "^0.7.1"
+    "firebase-functions": "^0.7.1",
+    "lodash": "^4.17.4",
+    "request-promise": "^4.2.2",
+    "sharp": "^0.18.4"
   },
   "private": true
 }
