--- a/functions/package.json
+++ b/functions/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "firebase-admin": "~5.4.2",
-    "firebase-functions": "^0.7.1"
+    "firebase-functions": "^0.7.1",
+    "lodash": "^4.17.4",
+    "request-promise": "^4.2.2",
+    "sharp": "^0.18.4"
   },
   "private": true
 }
