--- a/functions/package.json
+++ b/functions/package.json
@@ -10,11 +10,12 @@
   },
   "dependencies": {
     "@google-cloud/storage": "^1.5.0",
-    "firebase-admin": "~5.4.2",
+    "firebase-admin": "^5.5.1",
     "firebase-functions": "^0.7.1",
     "lodash": "^4.17.4",
     "request-promise": "^4.2.2",
-    "sharp": "^0.18.4"
+    "sharp": "^0.18.4",
+    "stripe": "^5.3.0"
   },
   "private": true
 }
