--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "intl": "^1.2.5",
     "lodash": "^4.17.4",
     "ng-mdb-pro": "git+https://oauth2:w67qvcj6w1FbSFmHZpjX@git.mdbootstrap.com/mdb/angular/ng-pro.git",
+    "ng-stripe-checkout": "^1.0.2",
     "ng2-logger": "^1.0.3",
     "rxjs": "^5.5.3",
     "screenfull": "^3.3.2",
