--- a/.travis.yml
+++ b/.travis.yml
@@ -17,10 +17,12 @@ before_install:
   - "sh -e /etc/init.d/xvfb start"
   - "npm config set spin false"
 before_script:
-- npm install -g firebase-tools
+- npm install -g firebase-tools codecov
 script:
-- npm run test:ci
+- npm run test:coverage
 - npm run e2e
+after_success:
+  - codecov
 before_deploy:
 - npm run pwa
 deploy:
