--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
   "jest": {
     "preset": "jest-preset-angular",
     "setupTestFrameworkScriptFile": "<rootDir>/src/jest.conf.ts",
+    "coverageDirectory": "./coverage/",
     "setupFiles": [
       "<rootDir>/jest-mocks/shimSetup.ts"
     ],
@@ -100,7 +101,6 @@
       "json",
       "lcov",
       "text"
-    ],
-    "coverageDirectory": "./coverage"
+    ]
   }
 }
