--- a/functions/package.json
+++ b/functions/package.json
@@ -12,9 +12,9 @@
     "@google-cloud/storage": "^1.5.1",
     "firebase-admin": "^5.5.1",
     "firebase-functions": "^0.7.1",
+    "jimp": "^0.2.28",
     "lodash": "^4.17.4",
     "request-promise": "^4.2.2",
-    "sharp": "^0.18.4",
     "stripe": "^5.4.0"
   },
   "private": true
