--- a/.firebaserc
+++ b/.firebaserc
@@ -1,7 +1,7 @@
 {
   "projects": {
-    "default": "mercy-5ae35",
-    "master": "mercy-5ae35",
+    "default": "eventpicking-development",
+    "prod": "mercy-5ae35",
     "staging": "eventpicking-development"
   }
 }
