--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "ng build",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "pwa": "ng build --prod && sw-precache --root=dist --config=precache-config.js",
+    "pwa": "ng build --prod && sw-precache --root=public --config=precache-config.js",
     "test": "jest --browser",
     "test:ci": "jest --browser --runInBand",
     "test:coverage": "jest --browser --runInBand --coverage",
@@ -29,7 +29,7 @@
     "@ngx-translate/http-loader": "^2.0.0",
     "angularfire2": "5.0.0-rc.4",
     "chart.js": "^2.7.1",
-    "core-js": "^2.5.1",
+    "core-js": "^2.5.2",
     "easy-pie-chart": "^2.1.7",
     "firebase": "4.6.2",
     "font-awesome": "^4.7.0",
@@ -53,7 +53,7 @@
     "@types/jasminewd2": "~2.0.2",
     "@types/jest": "^21.1.8",
     "@types/node": "~6.0.60",
-    "codelyzer": "^4.0.1",
+    "codelyzer": "^4.0.2",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "jest": "^21.2.1",
