--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,11 @@ jobs:
     - stage: E2E
       script: npm run e2e
 
+    - stage: coverage
+      script:
+        - npm run test:coverage
+        - bash <(curl -s https://codecov.io/bash) -t $CODECOV_TOKEN
+
     - stage: deploy to staging
       before_script: npm install -g firebase-tools
       script: ng build --prod --env=dev
