--- a/package.json
+++ b/package.json
@@ -8,13 +8,11 @@
     "build": "ng build",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "pwa":
-      "ng build --prod && sw-precache --root=public --config=precache-config.js",
+    "pwa": "ng build --prod && sw-precache --root=public --config=precache-config.js",
     "test": "jest --browser",
     "test:ci": "jest --browser --runInBand",
     "test:coverage": "jest --browser --runInBand --coverage",
-    "docs":
-      "./node_modules/.bin/compodoc -d ./docs/ -p ./tsconfig.json -n \"Eventpicking - Dokumentation\""
+    "docs": "./node_modules/.bin/compodoc -d ./docs/ -p ./tsconfig.json -n \"Eventpicking - Dokumentation\""
   },
   "private": true,
   "dependencies": {
@@ -29,6 +27,7 @@
     "@angular/router": "^5.1.0",
     "@ngx-translate/core": "^9.0.1",
     "@ngx-translate/http-loader": "^2.0.0",
+    "@types/stripe-checkout": "^1.0.1",
     "angularfire2": "5.0.0-rc.4",
     "chart.js": "^2.7.1",
     "core-js": "^2.5.2",
@@ -38,9 +37,7 @@
     "hammerjs": "^2.0.8",
     "intl": "^1.2.5",
     "lodash": "^4.17.4",
-    "ng-mdb-pro":
-      "git+https://oauth2:w67qvcj6w1FbSFmHZpjX@git.mdbootstrap.com/mdb/angular/ng-pro.git",
-    "ng-stripe-checkout": "^1.0.2",
+    "ng-mdb-pro": "git+https://oauth2:w67qvcj6w1FbSFmHZpjX@git.mdbootstrap.com/mdb/angular/ng-pro.git",
     "ng2-logger": "^1.0.3",
     "rxjs": "^5.5.5",
     "screenfull": "^3.3.2",
@@ -77,9 +74,15 @@
     "preset": "jest-preset-angular",
     "setupTestFrameworkScriptFile": "<rootDir>/src/jest.conf.ts",
     "coverageDirectory": "./coverage/",
-    "setupFiles": ["<rootDir>/jest-mocks/shimSetup.ts"],
-    "transformIgnorePatterns": ["node_modules/(?!(@ngrx|ng-mdb-pro))"],
-    "coveragePathIgnorePatterns": ["<rootDir>/e2e/"],
+    "setupFiles": [
+      "<rootDir>/jest-mocks/shimSetup.ts"
+    ],
+    "transformIgnorePatterns": [
+      "node_modules/(?!(@ngrx|ng-mdb-pro))"
+    ],
+    "coveragePathIgnorePatterns": [
+      "<rootDir>/e2e/"
+    ],
     "collectCoverageFrom": [
       "**/*.{ts}",
       "!**/environments/*{ts}",
@@ -91,7 +94,13 @@
       "!**/*main.{ts}",
       "!**/node_modules/**"
     ],
-    "moduleFileExtensions": ["ts", "js", "json"],
-    "coverageReporters": ["lcov"]
+    "moduleFileExtensions": [
+      "ts",
+      "js",
+      "json"
+    ],
+    "coverageReporters": [
+      "lcov"
+    ]
   }
 }
