--- a/functions/package.json
+++ b/functions/package.json
@@ -13,9 +13,7 @@
     "firebase-admin": "^5.5.1",
     "firebase-functions": "^0.7.1",
     "jimp": "^0.2.28",
-    "lodash": "^4.17.4",
-    "request-promise": "^4.2.2",
-    "stripe": "^5.4.0"
+    "request-promise": "^4.2.2"
   },
   "private": true
 }
