--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@types/stripe-checkout": "^1.0.1",
     "angularfire2": "5.0.0-rc.4",
     "chart.js": "^2.7.1",
-    "core-js": "^2.5.2",
+    "core-js": "^2.5.3",
     "easy-pie-chart": "^2.1.7",
     "firebase": "4.6.2",
     "font-awesome": "^4.7.0",
@@ -52,12 +52,12 @@
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/jest": "^21.1.8",
-    "@types/node": "~6.0.60",
+    "@types/node": "^6.0.93",
     "codelyzer": "^4.0.2",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "jest": "^21.2.1",
-    "jest-preset-angular": "^4.0.1",
+    "jest-preset-angular": "^4.0.2",
     "karma": "~1.7.0",
     "karma-chrome-launcher": "~2.1.1",
     "karma-cli": "~1.0.1",
