--- a/package.json
+++ b/package.json
@@ -16,15 +16,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.1.0",
-    "@angular/common": "^5.1.0",
-    "@angular/compiler": "^5.1.0",
-    "@angular/core": "^5.1.0",
-    "@angular/forms": "^5.1.0",
-    "@angular/http": "^5.1.0",
-    "@angular/platform-browser": "^5.1.0",
-    "@angular/platform-browser-dynamic": "^5.1.0",
-    "@angular/router": "^5.1.0",
+    "@angular/animations": "^5.1.1",
+    "@angular/common": "^5.1.1",
+    "@angular/compiler": "^5.1.1",
+    "@angular/core": "^5.1.1",
+    "@angular/forms": "^5.1.1",
+    "@angular/http": "^5.1.1",
+    "@angular/platform-browser": "^5.1.1",
+    "@angular/platform-browser-dynamic": "^5.1.1",
+    "@angular/router": "^5.1.1",
     "@ngx-translate/core": "^9.0.1",
     "@ngx-translate/http-loader": "^2.0.0",
     "@types/stripe-checkout": "^1.0.1",
@@ -32,7 +32,7 @@
     "chart.js": "^2.7.1",
     "core-js": "^2.5.3",
     "easy-pie-chart": "^2.1.7",
-    "firebase": "4.6.2",
+    "firebase": "^4.8.0",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "intl": "^1.2.5",
@@ -46,28 +46,28 @@
   },
   "devDependencies": {
     "@angular/cli": "1.5.0",
-    "@angular/compiler-cli": "^5.1.0",
-    "@angular/language-service": "^5.1.0",
+    "@angular/compiler-cli": "^5.1.1",
+    "@angular/language-service": "^5.1.1",
     "@compodoc/compodoc": "^1.0.5",
-    "@types/jasmine": "~2.5.53",
+    "@types/jasmine": "~2.8.2",
     "@types/jasminewd2": "~2.0.2",
     "@types/jest": "^21.1.8",
-    "@types/node": "^6.0.93",
+    "@types/node": "~8.5.1",
     "codelyzer": "^4.0.2",
-    "jasmine-core": "~2.6.2",
-    "jasmine-spec-reporter": "~4.1.0",
+    "jasmine-core": "~2.8.0",
+    "jasmine-spec-reporter": "~4.2.1",
     "jest": "^21.2.1",
     "jest-preset-angular": "^4.0.2",
     "karma": "~1.7.0",
-    "karma-chrome-launcher": "~2.1.1",
+    "karma-chrome-launcher": "~2.2.0",
     "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "^1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
+    "protractor": "~5.2.2",
     "sw-precache-webpack-plugin": "^0.11.4",
-    "ts-node": "~3.2.0",
-    "tslint": "~5.7.0",
+    "ts-node": "~4.0.1",
+    "tslint": "~5.8.0",
     "typescript": "~2.4.2"
   },
   "jest": {
