--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@angular/platform-browser": "^5.1.1",
     "@angular/platform-browser-dynamic": "^5.1.1",
     "@angular/router": "^5.1.1",
-    "@ngx-translate/core": "^9.0.1",
+    "@ngx-translate/core": "^9.0.2",
     "@ngx-translate/http-loader": "^2.0.0",
     "@types/stripe-checkout": "^1.0.1",
     "angularfire2": "5.0.0-rc.4",
@@ -66,7 +66,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.2.2",
     "sw-precache-webpack-plugin": "^0.11.4",
-    "ts-node": "~4.0.1",
+    "ts-node": "^4.0.2",
     "tslint": "~5.8.0",
     "typescript": "~2.4.2"
   },
