--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
     "build": "ng build",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "pwa": "ng build --prod && sw-precache --root=public --config=precache-config.js",
+    "pwa":
+      "ng build --prod && sw-precache --root=public --config=precache-config.js",
     "test": "jest --browser",
     "test:ci": "jest --browser --runInBand",
     "test:coverage": "jest --browser --runInBand --coverage",
-    "docs": "./node_modules/.bin/compodoc -d ./docs/ -p ./tsconfig.json -n \"Eventpicking - Dokumentation\""
+    "docs":
+      "./node_modules/.bin/compodoc -d ./docs/ -p ./tsconfig.json -n \"Eventpicking - Dokumentation\"",
+    "translate":
+      "i18n-translate-json AIzaSyAQslKY6YsIOA-o1C5n227fc3pddcV3yes ./src/assets/i18n en de"
   },
   "private": true,
   "dependencies": {
@@ -37,8 +41,10 @@
     "hammerjs": "^2.0.8",
     "intl": "^1.2.5",
     "lodash": "^4.17.4",
-    "ng-mdb-pro": "git+https://oauth2:w67qvcj6w1FbSFmHZpjX@git.mdbootstrap.com/mdb/angular/ng-pro.git",
+    "ng-mdb-pro":
+      "git+https://oauth2:w67qvcj6w1FbSFmHZpjX@git.mdbootstrap.com/mdb/angular/ng-pro.git",
     "ng2-logger": "^1.0.3",
+    "primeng": "^5.0.2",
     "rxjs": "^5.5.5",
     "screenfull": "^3.3.2",
     "web-animations-js": "^2.3.1",
@@ -74,15 +80,9 @@
     "preset": "jest-preset-angular",
     "setupTestFrameworkScriptFile": "<rootDir>/src/jest.conf.ts",
     "coverageDirectory": "./coverage/",
-    "setupFiles": [
-      "<rootDir>/jest-mocks/shimSetup.ts"
-    ],
-    "transformIgnorePatterns": [
-      "node_modules/(?!(@ngrx|ng-mdb-pro))"
-    ],
-    "coveragePathIgnorePatterns": [
-      "<rootDir>/e2e/"
-    ],
+    "setupFiles": ["<rootDir>/jest-mocks/shimSetup.ts"],
+    "transformIgnorePatterns": ["node_modules/(?!(@ngrx|ng-mdb-pro))"],
+    "coveragePathIgnorePatterns": ["<rootDir>/e2e/"],
     "collectCoverageFrom": [
       "**/*.{ts}",
       "!**/environments/*{ts}",
@@ -94,13 +94,7 @@
       "!**/*main.{ts}",
       "!**/node_modules/**"
     ],
-    "moduleFileExtensions": [
-      "ts",
-      "js",
-      "json"
-    ],
-    "coverageReporters": [
-      "lcov"
-    ]
+    "moduleFileExtensions": ["ts", "js", "json"],
+    "coverageReporters": ["lcov"]
   }
 }
