--- a/.travis.yml
+++ b/.travis.yml
@@ -34,10 +34,10 @@ jobs:
     - stage: E2E
       script: npm run e2e
 
-    - stage: coverage
-      script:
-        - npm run test:coverage
-        - bash <(curl -s https://codecov.io/bash) -t $CODECOV_TOKEN
+    # - stage: coverage
+    #   script:
+    #     - npm run test:coverage
+    #     - bash <(curl -s https://codecov.io/bash) -t $CODECOV_TOKEN
 
     - stage: deploy to staging
       if: type IN (push)
