--- a/functions/package.json
+++ b/functions/package.json
@@ -5,14 +5,17 @@
     "serve": "firebase serve --only functions",
     "shell": "firebase experimental:functions:shell",
     "start": "npm run shell",
-    "deploy": "firebase deploy --only functions",
+    "deploy:dev": "firebase deploy --only functions -P staging",
+    "deploy:prod": "firebase deploy --only functions -P prod",
     "logs": "firebase functions:log"
   },
   "dependencies": {
     "@google-cloud/storage": "^1.5.1",
+    "child-process-promise": "^2.2.1",
     "firebase-admin": "^5.5.1",
-    "firebase-functions": "^0.7.4",
-    "jimp": "^0.2.28",
+    "firebase-functions": "^0.7.5",
+    "mkdirp": "^0.5.1",
+    "mkdirp-promise": "^5.0.1",
     "request-promise": "^4.2.2"
   },
   "private": true
