--- a/.travis.yml
+++ b/.travis.yml
@@ -34,23 +34,28 @@ jobs:
     - stage: E2E
       script: npm run e2e
 
-    # - stage: coverage
-    #   script:
-    #     - npm run test:coverage
-    #     - bash <(curl -s https://codecov.io/bash) -t $CODECOV_TOKEN
+    - stage: coverage
+      script:
+        - npm run test:coverage
+        - bash <(curl -s https://codecov.io/bash) -t $CODECOV_TOKEN
 
     - stage: deploy to staging
       if: type IN (push)
-      before_script: npm install -g firebase-tools
+      before_script:
+        - npm install -g firebase-tools
+        - cd functions && npm install && cd ..
       script: ng build --prod --env=dev
-      after_success: firebase deploy --only hosting -P staging --token $FIREBASE_TOKEN
+      after_success: firebase deploy -P staging --token $FIREBASE_TOKEN
 
     - stage: deploy to production
       if: type IN (push)
       if: branch = master
-      before_script: npm install -g firebase-tools
+      before_script:
+        - npm install -g firebase-tools
+        - cd functions && npm install && cd ..
       script: npm run pwa
-      after_success: firebase deploy --only hosting -P prod --token $FIREBASE_TOKEN
+      after_success:
+        - firebase deploy -P prod --token $FIREBASE_TOKEN
 
 notifications:
   webhooks:
