--- a/functions/package.json
+++ b/functions/package.json
@@ -1,6 +1,11 @@
 {
-  "name": "functions",
-  "description": "Cloud Functions for Firebase",
+  "name": "eventpicking-functions",
+  "description": "Cloud Functions for Eventpicking.de",
+  "license": "UNLICENSED",
+  "author": {
+    "name": "Daniel Sogl",
+    "email": "daniel@sogls.de"
+  },
   "scripts": {
     "serve": "firebase serve --only functions",
     "shell": "firebase experimental:functions:shell",
@@ -14,6 +19,8 @@
     "child-process-promise": "^2.2.1",
     "firebase-admin": "^5.5.1",
     "firebase-functions": "^0.7.5",
+    "fs-readfile-promise": "^3.0.0",
+    "imageinfo": "^1.0.4",
     "mkdirp": "^0.5.1",
     "mkdirp-promise": "^5.0.1",
     "request-promise": "^4.2.2"
