--- a/package.json
+++ b/package.json
@@ -42,16 +42,16 @@
     "rxjs": "^5.5.6",
     "screenfull": "^3.3.2",
     "web-animations-js": "^2.3.1",
-    "zone.js": "^0.8.18"
+    "zone.js": "^0.8.19"
   },
   "devDependencies": {
     "@angular/cli": "1.5.0",
     "@angular/compiler-cli": "^5.1.2",
     "@angular/language-service": "^5.1.2",
     "@compodoc/compodoc": "^1.0.5",
-    "@types/jasmine": "~2.8.2",
+    "@types/jasmine": "^2.8.3",
     "@types/jasminewd2": "~2.0.2",
-    "@types/jest": "^21.1.9",
+    "@types/jest": "^21.1.10",
     "@types/node": "^8.5.2",
     "codelyzer": "^4.0.2",
     "jasmine-core": "~2.8.0",
@@ -61,7 +61,7 @@
     "karma": "^2.0.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
+    "karma-coverage-istanbul-reporter": "^1.3.3",
     "karma-jasmine": "^1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.2.2",
