--- a/.travis.yml
+++ b/.travis.yml
@@ -53,7 +53,7 @@ jobs:
       before_script:
         - npm install -g firebase-tools
         - cd functions && npm install && cd ..
-      script: npm run pwa
+      script: ng build --prod
       after_success:
         - firebase deploy -P prod --token $FIREBASE_TOKEN
 
