--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "build": "ng build",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "pwa": "ng build --prod && sw-precache --root=public --config=precache-config.js",
     "test": "jest --browser",
     "test:ci": "jest --browser --runInBand",
     "test:coverage": "jest --browser --runInBand --coverage",
@@ -42,6 +41,7 @@
     "rxjs": "^5.5.6",
     "screenfull": "^3.3.2",
     "web-animations-js": "^2.3.1",
+    "wowjs": "^1.1.3",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
@@ -65,7 +65,6 @@
     "karma-jasmine": "^1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.2.2",
-    "sw-precache-webpack-plugin": "^0.11.4",
     "ts-node": "^4.1.0",
     "tslint": "~5.8.0",
     "typescript": "^2.7.0-dev.20171226"
