remove private informations

--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "localforage": "^1.5.6",
     "lodash": "^4.17.4",
     "ng-lazyload-image": "^3.4.2",
-    "ng-mdb-pro": "git+https://fdbab677d1494b5590791d1b5de3e14c775010db:x-oauth-basic@github.com/danielsogl/ng-mdb-pro.git",
+    "ng-mdb-pro": "<private key>",
     "ng2-logger": "^1.0.12",
     "rxjs": "^5.5.6",
     "screenfull": "^3.3.2",
